# pySupersetCli

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
doc/: README.md
doc/commands/: upload.md
doc/uml/: architecture.puml  deployment.puml
src/pySupersetCli/: __init__.py  __main__.py  cmd_upload.py  ret.py  superset.py  version.py
tools/: create_executable.bat
